fix: adjust DocMetadata mdx component spacing

--- a/packages/logos-docusaurus-theme/src/client/components/mdx/DocMetadata/DocMetadata.scss
+++ b/packages/logos-docusaurus-theme/src/client/components/mdx/DocMetadata/DocMetadata.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   line-height: 0;
+  margin-bottom: 2.5rem;
 
   & > span:not(:last-child) {
     &::after {
